<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PosApp</string>


    <string name="lang_en">English</string>
    <string name="lang_th">ภาษาไทย (th)</string>
    <string name="lang_jp">日本語 (jp)</string>

    <string name="hint_search">Enter name or barcode</string>
    <string name="add_new_product">Add New Product</string>
    <string name="inventory">Inventory</string>
    <string name="sale">Sale</string>
    <string name="report">Report</string>
    <string name="scan">Scan</string>
    <string name="barcode">Barcode</string>
    <string name="name">Name</string>
    <string name="clear">Clear</string>
    <string name="unit_price">Unit_Price</string>
    <string name="confirm">Done</string>
    <string name="please_input_all">Please fulfill all data.</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="hint_empty_sale">Sale is empty.</string>
    <string name="dialog_clear_sale">Are you sure you want to CLEAR this sale?</string>
    <string name="no">No</string>
    <string name="cash">Cash</string>
    <string name="cancel">Cancel</string>
    <string name="hint_cash">Enter cash here</string>
    <string name="need_money">Need</string>
    <string name="change">Change</string>
    <string name="previous">&lt;</string>
    <string name="next">></string>
    <string name="id">ID</string>
    <string name="date">Date</string>
    <string-array name="period">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">3</item>
    </style>
</resources>
